--- a/templates/index.html
+++ b/templates/index.html
@@ -129,7 +129,7 @@
             <div class="col-md-3">
               <div class="card">
                 <div class="card-body">
-                  <div class="card-header">
+                  <div class="card-header" style="background:url('static/img/bgXspark.png')">
                     <h4 style="margin-top:0px">X-Spark</h4>
                     <img style="width:72px;border-radius:36px;border:2px solid #ddd" src="static/img/logoXspark.png" /><br /><br />
                   </div>
@@ -353,10 +353,10 @@
   </footer>
 
   <script src="https://code.jquery.com/jquery-latest.js"></script>
-  <script href="static/js/bootstrap.min.js"></script>
-  <script href="static/js/theme.js"></script>
-  <script href="static/js/jquery.isotope.min.js"></script>
-  <script href="static/js/pi.init.tab.js"></script>
+  <script src="static/js/bootstrap.min.js"></script>
+  <script src="static/js/theme.js"></script>
+  <script src="static/js/jquery.isotope.min.js"></script>
+  <script src="static/js/pi.init.tab.js"></script>
   <script src="https://malsup.github.com/jquery.form.js"></script>
 </body>
 </html>
