--- a/templates/colors.html
+++ b/templates/colors.html
@@ -138,7 +138,7 @@
   </footer>
 
   <script src="http://code.jquery.com/jquery-latest.js"></script>
-  <script href="/static/js/bootstrap.min.js"></script>
-  <script href="/static/js/theme.js"></script>
+  <script src="/static/js/bootstrap.min.js"></script>
+  <script src="/static/js/theme.js"></script>
 </body>
 </html>
