server is ready and RIT added

--- a/templates/index.html
+++ b/templates/index.html
@@ -91,7 +91,6 @@
             Along with playing games, I enjoy learning how to build them. My main areas of interest are graphics, physics simulation and game engine architecture.
           </div>
           
-          
           <div class="col-sm-2">
             <img style="width:100px" src="static/img/iconData.png" class="img-responsive" />
           </div>
@@ -195,7 +194,19 @@
     <div class="row g" id="education" style="padding:0px 64px;text-align:center;">
       <br><br><br>
       <h1>Education</h1>
-      <div class="col-md-4">
+      <div class="col-md-3">
+        <div class="card">
+          <div class="card-body">
+            <br>
+            <img src="static/img/rit.gif" width="230">
+            <br><hr>
+            <h3>RIT</h3>
+            <em>Masters of Game Design and Development</em>
+            <p>2014 - 2016</p><br>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-3">
         <div class="card">
           <div class="card-body">
             <br>
@@ -207,7 +218,7 @@
           </div>
         </div>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-3">
         <div class="card">
           <div class="card-body">
             <br>
@@ -219,7 +230,7 @@
           </div>
         </div>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-3">
         <div class="card">
           <div class="card-body">
             <br><br><br>
