--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Gabe Ortega | iOS App Developer</title>
+	<title>Gabe Ortega | Game Developer</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Gabe Ortega | iOS App Developer">
@@ -312,7 +312,7 @@
               <div class="head headbottom">
                 <h6>Work with Gabe</h6>
               </div>
-              <p>He's a motivated and determined iOS Developer. He builds cool games like X-Spark and Colors!</p>
+              <p>He's a motivated and determined Game Developer. He builds cool games like X-Spark and Colors!</p>
             </div>
           </div>
         </div>
