--- a/templates/smashcii.html
+++ b/templates/smashcii.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Smashcii | iOS Game</title>
+  <title>Smashcii | Windows Game</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   
@@ -54,7 +54,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12 section_header">
-          <h3>iOS Game</h3>
+          <h3>Windows Game</h3>
         </div>
       </div>
       <div class="row">
