added movies, updated descriptions, CURRENTLY IN DEV MODE

--- a/templates/colors.html
+++ b/templates/colors.html
@@ -87,9 +87,9 @@
         </div>
         <div class="col-sm-5 right_box">
           <h2>Colors</h2>
-          <p>Colors is a casual puzzle game for mobile. Players must solve different puzzles by dragging and combining colored tiles to gain points.</p>
-          <p>Colors was originally built using Unity and later ported to native iOS using Swift.</p>
-          <p>My role in this project was lead designer / programmer. In the Unity project, I built the color mixing mechanic. I also rebuilt the application in Swift for iOS devices.</p>
+          <p><em>Colors</em> is a casual puzzle game for mobile. Players must solve different puzzles by dragging and combining colored tiles to gain points.</p>
+          <p><em>Colors</em> was originally built using <em>Unity</em> and later ported to native <em>iOS</em> using <em>Swift</em>.</p>
+          <p>My role in this project was lead designer / programmer. In the Unity project, I built the color mixing mechanic. I also rebuilt the application in <em>Swift</em> for <em>iOS</em> devices.</p>
         </div>
       </div>
     </div>
