--- a/templates/index.html
+++ b/templates/index.html
@@ -74,52 +74,9 @@
         </div>
       </div>
     </div>
-    
-    <!-- ABOUT -->
-    <div class="row" id="about" style="min-height:450px;background:#f9f9f9;padding:64px">
-      <div class="col-sm-12 left_box">
-        
-        <div class="row feature" style="background:white;padding:44px 24px;border:1px solid #ededed;margin-top:60px">
-          
-          <div class="col-sm-2">
-            <img style="width:100px" src="static/img/iconPeople.png" class="img-responsive" />
-          </div>
-          <div class="col-sm-4 info" style="font-size:16px;">
-            <h3 style="margin-top:0px">Meet Gabe</h3>
-            I began developing mobile applications 4 years ago as a hobby and eventually made it a career. Currently, I’m working as an iOS Engineer at FieldLens, while pursuing a Master’s Degree in Game Development at Rochester Institute of Technology.
-            <br><br>
-            Along with playing games, I enjoy learning how to build them. My main areas of interest are graphics, physics simulation and game engine architecture.
-          </div>
-          
-          <div class="col-sm-2">
-            <img style="width:100px" src="static/img/iconData.png" class="img-responsive" />
-          </div>
-          <div class="col-sm-4 info" style="font-size:16px">
-            <h3>Skills</h3>
-            <label for="ios-prog">iOS Development</label>
-            <div class="progress" id="ios-prog">
-              <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%;"></div>
-            </div>
-            <label for="c-prog">C++</label>
-            <div class="progress" id="c-prog">
-              <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;"></div>
-            </div>
-            <label for="s-prog">Objective-C</label>
-            <div class="progress" id="s-prog">
-              <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%;"></div>
-            </div>
-            <label for="s-prog">OpenGL</label>
-            <div class="progress" id="s-prog">
-              <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%;"></div>
-            </div>
-          </div>
-          
-        </div>
-      </div>
-    </div>
 
     <!-- PROJECTS -->
-    <div class="row g" id="projects">
+    <div class="row g" id="projects" style="padding-top:64px">
       <br><br>
       <div class="col-md-12">
         <div style="padding:0px 64px;text-align:center">
@@ -186,6 +143,49 @@
               </div>
             </div>
           </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- ABOUT -->
+    <div class="row" id="about" style="min-height:450px;background:#f9f9f9;padding:64px;padding-top:20px;padding-bottom:20px">
+      <div class="col-sm-12 left_box">
+        
+        <div class="row feature" style="background:white;padding:44px 24px;border:1px solid #ededed;margin-top:60px">
+          
+          <div class="col-sm-2">
+            <img style="width:100px" src="static/img/iconPeople.png" class="img-responsive" />
+          </div>
+          <div class="col-sm-4 info" style="font-size:16px;">
+            <h3 style="margin-top:0px">Meet Gabe</h3>
+            I began developing mobile applications 4 years ago as a hobby and eventually made it a career. Currently, I’m working as an iOS Engineer at FieldLens, while pursuing a Master’s Degree in Game Development at Rochester Institute of Technology.
+            <br><br>
+            Along with playing games, I enjoy learning how to build them. My main areas of interest are graphics, physics simulation and game engine architecture.
+          </div>
+          
+          <div class="col-sm-2">
+            <img style="width:100px" src="static/img/iconData.png" class="img-responsive" />
+          </div>
+          <div class="col-sm-4 info" style="font-size:16px">
+            <h3>Skills</h3>
+            <label for="ios-prog">iOS Development</label>
+            <div class="progress" id="ios-prog">
+              <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%;"></div>
+            </div>
+            <label for="c-prog">C++</label>
+            <div class="progress" id="c-prog">
+              <div class="progress-bar" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;"></div>
+            </div>
+            <label for="s-prog">Objective-C</label>
+            <div class="progress" id="s-prog">
+              <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%;"></div>
+            </div>
+            <label for="s-prog">OpenGL</label>
+            <div class="progress" id="s-prog">
+              <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%;"></div>
+            </div>
+          </div>
+          
         </div>
       </div>
     </div>
