--- a/templates/collisiondetection.html
+++ b/templates/collisiondetection.html
@@ -63,6 +63,10 @@
             <img src="/static/img/collisiondetection/c1.png" class="img-responsive" width="480">
             <img src="/static/img/collisiondetection/c2.png" class="img-responsive" width="480">
             <img src="/static/img/collisiondetection/c3.png" class="img-responsive" width="480">
+            <video width="480" id="video">
+              <source src="/static/img/mov/collision-detection.mp4" type="video/mp4">
+              Sorry, your browser does not support HTML5 video!
+            </video>
           </div>
           <div class="thumbs">
             <div class="thumb">
@@ -77,19 +81,24 @@
                 <div class="more">+</div>
               </a>
             </div>
-            <div class="thumb last">
+            <div class="thumb">
               <img src="/static/img/collisiondetection/c3.png" width="100">
               <a href="#" class="mask">
                 <div class="more">+</div>
+              </a>
+            </div>
+            <div class="thumb last" onClick="runVideo()">
+              <img src="/static/img/collisiondetection/c3.png" width="100">
+              <a href="#" class="mask">
+                <div class="more" style="margin-left:-5px"><span class="glyphicon glyphicon-play"></span></div>
               </a>
             </div>
           </div>
         </div>
         <div class="col-sm-5 right_box">
           <h2>Collision Detection</h2>
-          <p>This is a project I built to simulate physical collisions in 3D between different types of geometric primitives. The simulation incorporates linear and angular momentum in order to calculate collision response between spheres and cubes. </p>
-          <p>It also utilizes cell partitioning, and separating axis techniques.</p>
-          <p>This was built in OpenGL and C++ using Visual Studio.</p>
+          <p>This is a project I built to simulate physical collisions in 3D between different types of geometric primitives. The simulation incorporates linear and angular momentum in order to calculate collision response between spheres. It also utilizes cell partitioning, and I’m planning to add separating axis detection for proper sphere / cube collisions.</p>
+          <p>This was built in <em>OpenGL</em> and <em>C++</em> using <em>Visual Studio</em>.</p>
         </div>
       </div>
     </div>
@@ -140,5 +149,9 @@
   <script src="http://code.jquery.com/jquery-latest.js"></script>
   <script src="/static/js/bootstrap.min.js"></script>
   <script src="/static/js/theme.js"></script>
+  <script type="text/javascript">
+  var video = document.getElementById("video");
+  function runVideo () {video.setAttribute("controls","controls");}
+  </script>
 </body>
 </html>
