--- a/templates/smashcii.html
+++ b/templates/smashcii.html
@@ -63,6 +63,10 @@
             <img src="/static/img/smashcii/s1.png" class="img-responsive" width="480">
             <img src="/static/img/smashcii/s2.png" class="img-responsive" width="480">
             <img src="/static/img/smashcii/s3.png" class="img-responsive" width="480">
+            <video width="480" id="video">
+              <source src="/static/img/mov/smashcii.mp4" type="video/mp4">
+              Sorry, your browser does not support HTML5 video!
+            </video>
           </div>
           <div class="thumbs">
             <div class="thumb">
@@ -77,19 +81,26 @@
                 <div class="more">+</div>
               </a>
             </div>
-            <div class="thumb last">
+            <div class="thumb">
               <img src="/static/img/smashcii/s3.png" width="100">
               <a href="#" class="mask">
                 <div class="more">+</div>
+              </a>
+            </div>
+            <div class="thumb last" onClick="runVideo()">
+              <img src="/static/img/smashcii/s3.png" width="100">
+              <a href="#" class="mask">
+                <div class="more" style="margin-left:-5px"><span class="glyphicon glyphicon-play"></span></div>
               </a>
             </div>
           </div>
         </div>
         <div class="col-sm-5 right_box">
           <h2>Smashcii</h2>
-          <p>Smashcii is a fast paced rogue-like shooter. In each level, the player must survive waves of enemies, to improve his or her score. Each level provides different pathways to avoid and outwit pursuing enemies.</p>
-          <p>Smashcii was built in C++ using Visual Studio, as part of RIT ImagineCup  Hackathon 2014.</p>
+          <p><em>Smashcii</em> is a fast paced roguelike shooter. In each level, the player must survive waves of enemies, to improve his or her score. Each level provides different pathways to avoid and outwit pursuing enemies.</p>
+          <p><em>Smashcii</em> was built in C++ using <em>Visual Studio</em>, as part of RIT ImagineCup Hackathon 2014.</p>
           <p>As lead designer / programmer on this project, I was responsible for the game engine, which handled render updates, collision detection/response, and player input.</p>
+          <a href="https://bitbucket.org/gortega56/smashcii">See the code</a>
         </div>
       </div>
     </div>
@@ -140,5 +151,9 @@
   <script src="http://code.jquery.com/jquery-latest.js"></script>
   <script src="/static/js/bootstrap.min.js"></script>
   <script src="/static/js/theme.js"></script>
+  <script type="text/javascript">
+  var video = document.getElementById("video");
+  function runVideo () {video.setAttribute("controls","controls");}
+  </script>
 </body>
 </html>
