--- a/templates/index.html
+++ b/templates/index.html
@@ -146,6 +146,27 @@
         </div>
       </div>
     </div>
+    <div class="row g">
+      <div class="col-md-12">
+        <div style="padding:0px 64px;text-align:center">
+          <div class="col-md-3">
+            <div class="card">
+              <div class="card-body">
+                <div class="card-header" style="background:url('static/img/platformer/platformer.png');background-position:-80px">
+                  <h4 style="margin-top:0px;color:white;">Platformer</h4>
+                  <img style="width:72px;border-radius:36px;border:2px solid #ddd" src="static/img/platformer/platformer.png" /><br /><br />
+                </div>
+                <div style="text-align:left;margin-left:4px;padding:32px">
+                This project was built as a proof of concept for a platformer where you control the platforms instead of the character. It utilizes integration techniques to simulate velocity and acceleration due to gravity, as well as collision detection and response for a sphere and line segment.
+                <br /><br />
+                <a href="/projects/platformer" class="btn proj-btn">View</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <!-- ABOUT -->
     <div class="row" id="about" style="min-height:450px;background:#f9f9f9;padding:64px;padding-top:20px;padding-bottom:20px">
