--- a/templates/index.html
+++ b/templates/index.html
@@ -58,6 +58,7 @@
           <li><a href="#projects">PROJECTS</a></li>
           <li><a href="#education">EDUCATION</a></li>
           <li><a href="#experience">EXPERIENCE</a></li>
+          <li><a href="/resume">RÉSUMÉ</a></li>
           <li><a href="#contact">CONTACT</a></li>
         </ul>
       </div>
@@ -328,6 +329,10 @@
                 <li class="icon">
                   <span class="contacticos ico2"></span>
                   <a class="text" href="mailto:gabriel.ortega56@gmail.com">gabriel.ortega56@gmail.com</a>
+                </li>
+                <br>
+                <li class="icon">
+                  <a href="/resume">Résumé</a>
                 </li>
               </ul>
               <div class="head headbottom">
