--- a/templates/resume.html
+++ b/templates/resume.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Platformer | Windows Game</title>
+  <title>Gabriel Ortega | Résumé</title>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   
@@ -14,7 +14,6 @@
 
     <link rel="stylesheet" href="/static/css/compiled/portfolio-item.css" type="text/css" media="screen" />
     <link rel="stylesheet" type="text/css" href="/static/css/lib/animate.css" media="screen, projection" />
-    <!-- <link rel="stylesheet" href="/static/css/portfolio-item.css" type="text/css" media="screen" /> -->
 
     <style type="text/css">
     .thumb, .big img { border:1px solid #eee; }
@@ -55,31 +54,19 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12 section_header">
-          <h3>Windows Game</h3>
+          <h3>Résumé</h3>
+          <h5><a href="/static/resume.pdf">Download</a></h5>
         </div>
       </div>
       <div class="row">
-        <div class="col-sm-7 left_box">
-          <div class="big">
-            <video width="500" controls id="video">
-              <source src="/static/img/mov/platformer.mp4" type="video/mp4">
-              Sorry, your browser does not support HTML5 video!
-            </video>
-          </div>
-          <!-- <div class="thumbs">
-            <div class="thumb last">
-              <img src="/static/img/x-spark/x1.png" width="150">
-              <a href="#" class="mask">
-                <div class="more" style="margin-left:-5px"><span class="glyphicon glyphicon-play"></span></div>
-              </a>
-            </div>
-          </div> -->
-        </div>
-        <div class="col-sm-5 right_box">
-          <h2>Platformer</h2>
-          <p>This project was built as a proof of concept for a platformer where you control the platforms instead of the character. It utilizes integration techniques to simulate velocity and acceleration due to gravity, as well as collision detection and response for a sphere and line segment.</p>
-          <p>This was built in <em>OpenGL</em> and <em>C++</em> using <em>Visual Studio</em>.</p>
-          <a href="https://github.com/gortega56/WhatDoWeDoNow">See the code</a>
+        <div class="col-sm-12 left_box">
+          
+            <object data="/static/resume.pdf" type="application/pdf" width="100%" height="1070" style="margin: 0 auto;">
+              <p>It appears you don't have a PDF plugin for this browser.
+              No biggie... you can <a href="/static/resume.pdf">click here to
+              download the PDF file.</a></p>
+            </object>
+
         </div>
       </div>
     </div>
@@ -126,7 +113,7 @@
       </div>
     </div>
   </footer>
-
+  
   <script src="http://code.jquery.com/jquery-latest.js"></script>
   <script src="/static/js/bootstrap.min.js"></script>
   <script src="/static/js/theme.js"></script>
