--- a/templates/x-spark.html
+++ b/templates/x-spark.html
@@ -44,6 +44,7 @@
           <li><a href="/#projects">PROJECTS</a></li>
           <li><a href="/#education">EDUCATION</a></li>
           <li><a href="/#experience">EXPERIENCE</a></li>
+          <li><a href="/resume">RÉSUMÉ</a></li>
           <li><a href="/#contact">CONTACT</a></li>
         </ul>
       </div>
